[package]
name = "yojo-art-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
yojo-art-utils = { path="./utils" }
tokio-stream = "*"
tokio = { version = "1.0", features = ["rt-multi-thread","signal","process"] }
tokio-util = { version = "0.7.8", features = ["io"] }
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
headers = "^0.3.8"
serde = {version="^1.0",features=["derive"]}
serde_json ="1"
serde_yaml = "0.9"
chrono = {version="0.4",features=["serde"]}
uuid = { version = "1.10", features = ["v4"] }
sha2 = "0.10"
base64 = "0.22"
md5 = "0.7"
infer = { version = "0.16", default-features = false }
percent-encoding = "2.3.1"
ndarray = "0.16"
tract-data = "0.21.6"
num = "0.4.3"
nanoid = "0.4.0"
pad = "0.1.6"
ulid = { version = "1.2", default-features = false }
rand = { version = "0.9", features = ["std_rng"] }
memory-cache-rs = "0.2.0"
flate2 = "1.1.0"
regex = "1.11.1"

#http
axum = { version = "0.7", features = ["ws","http2","multipart"] }
rust-s3 = { git = "https://github.com/kozakura913/rust-s3" ,branch="with_metadata", default-features = false, features = ["tokio-rustls-tls", "fail-on-err"] }
reqwest = { version = "0.12", default-features = false , features = ["rustls-tls-native-roots", "charset"] }
reqwest-websocket = "0.3.0"
punycode = "0.4.1"

#image
image = {git="https://github.com/kozakura913/image.git",branch="main"}
webp = { version = "0.3.0", default-features = false }
resvg = {version="0.41",features = [ "text","memmap-fonts","raster-images" ] }
rexif = "0.7"
avif-decoder_dep = { path="./avif-decoder_dep" ,optional = true }
fast_image_resize = "3.0"
nsfw = { version = "0.2.0", default-features = false }
blurhash = "0.2.3"

# db
diesel ={version="*", features = ["chrono","numeric","serde_json","64-column-tables"]}
diesel-async={version="0.5.2", features = ["postgres","bb8"]}
diesel-derive-enum ={version="2.1.0", features = ["postgres"]}
strum_macros = "0.26.4"
strum = "0.26.3"
bigdecimal = "*"

redis = { version = "0.26", features = ["tokio-comp"] }

#[profile.dev]
#opt-level = 1

#[profile.dev.package."*"]
#opt-level = 3
