[package]
name = "yojo-art-utils"
version = "0.1.0"
authors = ["kozakura <kozakura@kzkr.xyz>"]
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
serde_json ="1"
diesel ={version="*", features = ["chrono","numeric","serde_json"]}
diesel-async={version="0.5.2", features = ["postgres","bb8"]}
